Update fetch api errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>Index</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
-	<script src="js/script.js"></script>
 	<script src="js/index.js"></script>
 </head>
 <body>
@@ -46,27 +45,27 @@
 
 		    <label for="fname"><b>First Name</b></label>
 		    <input type="text" id="fname" placeholder="Enter First Name" required>
-		    <p id="fnameerror" style="color: red;"></p>
+		    <p id="firstNameError" style="color: red;"></p>
 
 		    <label for="lname"><b>Last Name</b></label>
 		    <input type="text" id="lname" placeholder="Enter Last Name" required>
-		    <p id="lnameerror" style="color: red;"></p>
+		    <p id="lastNameError" style="color: red;"></p>
 
 		    <label for="uname"><b>User Name</b></label>
 		    <input type="text" id="uname" placeholder="Enter User Name" required>
-		    <p id="unameerror" style="color: red;"></p>
+		    <p id="userNameError" style="color: red;"></p>
 
 		    <label for="email"><b>Email</b></label>
 		    <input type="email" id="email" placeholder="Enter Email" autocomplete="off" required>
-		    <p id="emailerror" style="color: red;"></p>
+		    <p id="emailError" style="color: red;"></p>
 
 		    <label for="number"><b>Phone Number</b></label>
 		    <input type="tel" max="10" id="Phone" placeholder="Enter Contact Number" autocomplete="off" required>
-		    <p id="Phoneerror" style="color: red;"></p>
+		    <p id="phoneNumberError" style="color: red;"></p>
 
 		    <label for="psw"><b>Password</b></label>
 		    <input type="password" id="psw" autocomplete="off" placeholder="Enter Password" required>
-		    <p id="pswerror" style="color: red;"></p>
+		    <p id="passwordError" style="color: red;"></p>
 
 		    <label for="psw-repeat"><b>Repeat Password</b></label>
 		    <input type="password" id="psw-repeat" autocomplete="off" placeholder="Repeat Password" required>
@@ -85,6 +84,7 @@
 		</div>
 	</div>
 </body>
+<script src="js/script.js"></script>
 </html>
 
 
