--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="index.html">Index Page</a></li>
+					<li><a href="index.html">Index</a></li>
 					<li><a href="templates/user/about.html">About</a></li>
 				</ul>
 			</nav>
