Add edit fetch api plus token in header

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<h2>Welcome To IReporter</h2>
 		</div>
 		<div class="main">
+			<p id="result" style="color: green;font-weight: bold;font-size: 32px;"></p>
 			<p id="goodlogin" style="color: green;"></p>
 			<p id="errorlogin" style="color: red;"></p>
 			<form class="user-login" id="Login" action="#" autocomplete="on" onsubmit="return false">
