Add search and modify tables

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p id="result" style="color: green;font-weight: bold;font-size: 32px;"></p>
 			<p id="goodlogin" style="color: green;"></p>
 			<p id="errorlogin" style="color: red;"></p>
-			<form class="user-login" id="Login" action="#" autocomplete="on" onsubmit="return false">
+			<form class="user-login" id="Login" action="#" autocomplete="off" onsubmit="return false">
 			    <h1>Sign In</h1>
 			    <hr>
 
