--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Index</title>
+	<title>INDEX</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +16,7 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="templates/user/about.html">About</a></li>
+					<li><a href="templates/user/about.html">ABOUT</a></li>
 				</ul>
 			</nav>
 		</div>
